@@ -47,9 +47,11 @@ class CRequiredValidator extends CValidator
 		if($this->requiredValue!==null)
 		{
 			if(!$this->strict && $value!=$this->requiredValue || $this->strict && $value!==$this->requiredValue)
-			$message=$this->message!==null?$this->message:Yii::t('yii','{attribute} must be {value}.',
-				array('{value}'=>$this->requiredValue));
-			$this->addError($object,$attribute,$message);
+			{
+				$message=$this->message!==null?$this->message:Yii::t('yii','{attribute} must be {value}.',
+					array('{value}'=>$this->requiredValue));
+				$this->addError($object,$attribute,$message);
+			}
 		}
 		else if($this->isEmpty($value,true))
 		{
