@@ -10,6 +10,7 @@ Version 1.0.11 to be released
 - Bug #651: Fixed a bug in Oracle driver that may cause big loop (Qiang)
 - Bug #653: CDbMessageSource does translate messages when caching is enabled (Qiang)
 - Bug #670: Requirements checker page shows wrong minute (Qiang)
+- Bug #710: CRequiredValidator does not work as expected when its requiredValue is not null (Qiang)
 - Bug: CQueue::peek() should return the first item in the queue (Qiang)
 - Enh #643: Enhanced CAccessControlFilter::expression, COutputCache::varyByExpression and CExpressionDependency::expression so that they can use PHP callback (Qiang)
 - Enh #665: Added support for using CStarRating to collect tabular input (Qiang)
